<?xml version="1.0"?>
<package format="3">
  <name>yesense_ros2_driver</name>
  <version>0.0.3</version>
  <description>The yesense_imu package</description>

  <maintainer email="mail@tony.de">Tony</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial_driver</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>serial_driver</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
